# git-smash

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml  rust.yml
src/: args.rs  config.rs  errors.rs  git.rs  hash.rs  main.rs
