[package]
name = "git-smash"
version = "0.1.2"
description = "Smash staged changes into previous commits"
authors = ["anthraxx <levente@leventepolyak.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/anthraxx/git-smash"
homepage = "https://github.com/anthraxx/git-smash"
categories = ["command-line-utilities"]
keywords = ["git", "workflow"]

[dependencies]
anyhow = "^1.0"
regex = "^1.12"
clap = { version = "^4.5", features = ["derive"] }
clap_complete = "^4.5"
strum = "^0.27"
strum_macros = "^0.27"
ahash = "^0.8"
semver = "^1.0"

[profile.release]
lto = true
codegen-units = 1
